fix/image-alignment

--- a/client/src/pages/Products.css
+++ b/client/src/pages/Products.css
@@ -139,7 +139,7 @@
       display: unset;
       width: clamp(15vw, 45vw, 50vw );
       position: absolute;
-      top: 32%;
+      top: 27%;
       right: 2%;
     }
 
